# multi-ai-skills

./: .gitignore  .silver-bullet.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTOR-GUIDE.md  Makefile  README.md  SENTINEL-audit-multai-iter2.md  SENTINEL-audit-multai-iter3.md  SENTINEL-audit-multai.md  USER-GUIDE.md  pyproject.toml  settings.json  setup.sh
.claude-plugin/: hooks.json  marketplace.json  plugin.json
.github/workflows/: ci.yml
.planning/: ROADMAP.md  STATE.md
.planning/debug/: knowledge-base.md
.planning/debug/resolved/: deepseek-stop-detection-false-positive.md  gemini-dr-not-activating.md
.planning/phases/01-achieve-100-unit-test-coverage/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-06-PLAN.md  01-07-PLAN.md
docs/: Architecture-and-Design.md  CICD-Strategy-and-Plan.md  CNAME  KNOWLEDGE.md  SENTINEL-audit-multai.md  SRS.md  Test-Strategy-and-Plan.md  index.html  pre-release-quality-gate.md
docs/help/: index.html
docs/help/concepts/: index.html
docs/help/getting-started/: index.html
docs/help/reference/: index.html
docs/help/running-multai/: index.html
docs/help/troubleshooting/: index.html
docs/workflows/: full-dev-cycle.md
domains/: devops-platforms.md
reports/: preview.html
scripts/: version-stamp.sh
skills/comparator/: matrix_ops.py
skills/consolidator/: SKILL.md
skills/landscape-researcher/: SKILL.md
skills/multai-update/: SKILL.md
skills/orchestrator/: SKILL.md  platform-setup.md
skills/orchestrator/engine/: agent_fallback.py  cli.py  config.py  engine_setup.py  orchestrator.py  requirements.txt  retry_handler.py
skills/orchestrator/engine/tests/: conftest.py  test_base_platform.py  test_chatgpt_rate_limit.py  test_deepseek_completion.py  test_gemini_completion.py  test_inject_utils.py  test_retry_handler.py
skills/solution-researcher/: SKILL.md  consolidation-guide.md
tests/: test_agent_fallback.py  test_base_platform.py  test_browser_utils.py  test_chatgpt_extractor.py  test_cli.py  test_matrix_builder.py  test_matrix_ops.py  test_orchestrator.py  test_orchestrator_args.py  test_prompt_echo.py  test_setup_bootstrap.py  test_utils.py
tests/test_platforms/: test_gemini.py  test_grok.py  test_perplexity.py
