[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multai"
version = "0.2.260319"
description = "MultAI — submit prompts to 7 AI platforms simultaneously, manage rate limits, operate XLSX comparison matrices, and synthesize results. Packaged as a Claude Code plugin."
readme = "USER-GUIDE.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["claude-plugin", "multi-ai", "orchestration", "playwright", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Runtime dependencies for the plugin's Python scripts
dependencies = [
    "playwright>=1.40.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
# Agent fallback via browser-use (requires Python ≥3.11 — install in a separate venv)
fallback = [
    "browser-use==0.12.2",
    "anthropic>=0.76.0",
    "fastmcp>=2.0.0",
]

# Development / testing
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Repository = "https://github.com/alo-exp/multai"
"Bug Tracker" = "https://github.com/alo-exp/multai/issues"
"User Guide" = "https://github.com/alo-exp/multai/blob/main/USER-GUIDE.md"
"Contributor Guide" = "https://github.com/alo-exp/multai/blob/main/CONTRIBUTOR-GUIDE.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["skills*", "tests*", "domains*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.txt", "*.html", "*.py"]
